added gif, modified text
	images/movie_forecast.gif

--- a/index.html
+++ b/index.html
@@ -275,12 +275,7 @@ $(document).ready(function () {
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li>
-  <a href="research.html">Projects</a>
-</li>
-<li>
-  <a href="teaching.html">Teaching</a>
-</li>
+        
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
@@ -310,9 +305,17 @@ $(document).ready(function () {
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <p><img src="images/andrew.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="left"></p>
-<p>My work is centered on building forecasting models of animal-borne infectious disease. As a postdoc in [Scott Nuismer’s lab] (<a href="https://www.leeef.org/team" class="uri">https://www.leeef.org/team</a>),I’ve developed a forecasting model of Lassa fever.</p>
-<p>I graduated from the [University of Utah] (www.math.utah.edu) with a PhD in mathematics in 2016.</p>
-<p>My full CV is available <a href="files/Zabor_CV_2017_Q4.pdf">here</a>.</p>
+<p>My background is in mathematical biology. Currently, I work on mathematical models and machine learning to forecast the risk of animal-borne infectious diseases. Before that, I worked on models of animal vaccination, with an emphasis on understanding the benefits of transmissible vaccines.</p>
+<p>CV is <a href="files/Zabor_CV_2017_Q4.pdf">here</a></p>
+<hr />
+<p><br> <br> <br> <br> <br></p>
+
+<div id="lassa-risk-map" class="section level2">
+<h2>Lassa Risk Map</h2>
+<center>
+<a href="www.google.com"><img src="images/movie_forecast.gif" width="384" /></a>
+</center>
+</div>
 
 
 
