modified Rmd 	modified:   index.Rmd 	modified:   index.html 	deleted:    files/CV.pdf

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ $(document).ready(function () {
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <p><img src="images/andrew.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="left"></p>
 <p>My background is in mathematical biology. Currently, I work on mathematical models and machine learning to forecast the risk of animal-borne infectious diseases. Before that, I worked on models of animal vaccination, with an emphasis on understanding the benefits of transmissible vaccines.</p>
-<p>CV is <a href="files/Zabor_CV_2017_Q4.pdf">here</a></p>
+<p>Click <a href="files/CV/Basinski_CV.pdf">here</a> for a recent CV.</p>
 <hr />
 <p><br> <br> <br> <br> <br></p>
 
