modified:   index.Rmd 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p><img src="images/andrew.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="left"></p>
+<p><img src="images/Me.jpeg" style="width:25%; border:10px solid; margin-right: 20px" align="left"></p>
 <p>My background is in mathematical biology. This background has grown into experience using dynamical system models that solve applied problems in epidemiology, an appreciation for the beauty in mathematics, and a growing interest in machine learning. Currently, I use machine learning to forecast the risk of animal-borne infectious diseases. Before that, I worked on models of animal vaccination, with an emphasis on understanding the benefits of transmissible vaccines. See below for more details on these projects.</p>
 <p>Click <a href="files/CV/Basinski_CV.pdf">here</a> for a recent CV.</p>
 <hr />
