--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 
 
 
-<title>index.utf8</title>
+<title></title>
 
-<script src="site_libs/header-attrs-2.1/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/paper.min.css" rel="stylesheet" />
@@ -311,17 +310,18 @@ $(document).ready(function () {
 <p>Click <a href="files/CV/Basinski_CV.pdf">here</a> for a recent CV.</p>
 <hr />
 <p><br> <br> <br> <br> <br></p>
+
 </div>
 <div id="using-machine-learning-to-predict-pathogenic-threats" class="section level2">
 <h2>Using machine learning to predict pathogenic threats</h2>
 <p>The 2020 Covid-19 pandemic is a salient reminder that approximately 40% of new human diseases stem from viruses or bacteria that circulate in wildlife populations. Covid-19 is believed to be transmitted by bats. Other examples are HIV from chimpanzees and Influenza A from birds. Many emerging human diseases originate in low and middle income regions of the world with limited health system infrastructure. Consequently, humanity is largely unaware of new emergent infectious diseases until after many humans are impacted (i.e., after a pandemic).</p>
 <p>As part of the DARPA-funded PREEMPT (PREventing the EMergence of Pathogenic Threats) project, I worked with a team of researchers at the University of Idaho to build a machine learning framework that predicts the risk of pathogen transmission from a wildlife reservoir into human populations. We applied our framework to Lassa virus, an RNA arenavirus that primarily circulates in rodent populations of West Africa and causes Lassa Fever when transmitted to humans. Rough estimates indicate that the Lassa virus infects around 100,000 - 300,000 per year, and as many as 13 million individuals per year. The true number is difficult to estimate because, while 2% of cases are fatal, upwards of 80% of all cases are asymptomatic. However, the high mutational ability of RNA viruses like Lassa allows the possibility of new, more dangerous strains emerging in human populations. The GIF below shows our model’s predictions of Lassa transmission to humans in West Africa.</p>
 <center>
-<img src="images/movie_forecast.gif" style="width:4in" />
+<img src="images/movie_forecast.gif" width="384" />
 </center>
 <p>The forecasting model consists of different candidate submodels (layers) that each forecast a different aspect of the risk of Lassa Fever. The final forecasting model consists of a set of submodels that best predict the number of human Lassa cases in Nigeria. The first layer uses boosted regression trees that, when given land cover and weather attributes of known locations of Lassa occurence, predict the probability of Lassa being present at any 5 km by 5 km pixel across West Africa. Similarly, the second layer uses boosted regression trees to forecast the probability that the rodent reservoir of Lassa, the multimammate rat , occurs in a pixel. Finally, the third layer uses rodent trapping data to predict seasonal migrations of rats into and out of domestic settings. The form of the forecast is</p>
 <p><span class="math display">\[ \text{Lassa transmission risk} \sim D_L(x) D_R(x) T(t,x)\]</span>,</p>
-<p>where <span class="math inline">\(D_L(x)\)</span> is the probability of Lassa occuring at spatial position x, <span class="math inline">\(D_R(x)\)</span> gives the probability that the primary rodent reservoir occurs, and <span class="math inline">\(T(t,x)\)</span> describes the seasonal migration of the reservoir. Here, dependence on the spatial coordinate <span class="math inline">\(x\)</span> occurs through weather and land cover predictors from satellite datasets. This work is submitted to the Proceedings of the Royal Society B, and available as a <a href="https://www.biorxiv.org/content/10.1101/2020.03.05.979658v1">BioRxiv preprint</a>. Code that is discussed in the manuscript is available in <a href="https://github.com/54481andrew/Vaccinate-a-fluctuating-population">this github repository</a>.</p>
+<p>where <span class="math inline">\(D_L(x)\)</span> is the probability of Lassa occuring at spatial position x, <span class="math inline">\(D_R(x)\)</span> gives the probability that the primary rodent reservoir occurs, and <span class="math inline">\(T(t,x)\)</span> describes the seasonal migration of the reservoir. Here, dependence on the spatial coordinate <span class="math inline">\(x\)</span> occurs through weather and land cover predictors from satellite datasets. This work is submitted to the Proceedings of the Royal Society B, and available as a <a href="https://www.biorxiv.org/content/10.1101/2020.03.05.979658v1">BioRxiv preprint</a>. Code that is discussed in the manuscript is available in <a href="https://github.com/54481andrew/pathogen-spillover-forecast">this github repository</a>.</p>
 <p><br> <br></p>
 </div>
 <div id="when-should-you-vaccinate-a-fluctuating-population" class="section level2">
