--- a/index.html
+++ b/index.html
@@ -314,8 +314,9 @@ $(document).ready(function () {
 </div>
 <div id="using-machine-vision-to-assess-the-risk-of-zoonotic-diseases" class="section level2">
 <h2>Using machine vision to assess the risk of zoonotic diseases</h2>
-<p><br> <br></p>
-<p><img src="images/CNN_Building_Segmentation.jpg" style="width:75%; border:10px solid; margin-right: 20px" align="top"></p>
+<p><br></p>
+<p><img src="images/CNN_Building_Segmentation.jpg" style="width:75%; border:10px solid;align=center"></p>
+<p><br></p>
 <p>Climatic and land cover GIS datasets are valuable for predicting the burden of disease risk in areas that lack proper health surveillance. However, GIS datasets are often too coarse to allow finescale assessment of disease risk within different areas of a single village. Finescale features such as housing quality likely affect zoonotic disease transmission to humans. For example, disease-carrying rodents are better able to gain entry into a thatch hut versus a modern concrete building.</p>
 <p>As part of ongoing work, we are designing a convolutional neural network (CNN) that will “see” local village features directly from aerial imagery. The CNN is constructed using the Keras and tensorflow libraries in python, and performs image segmentation to classify image pixels into discrete categories (i.e., building, rice cultivation, etc.). The CNN will allow local village features to be detected from aerial imagery across West Africa and summarized into statistics (housing density, land area of cultivation) that are meaningful predictors of local zoonotic disease transmission. The image above is a demonstration of our model’s ability to detect buildings in a village.</p>
 <p><br> <br></p>
